clusters/personal/element-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: element-system
  labels:
    name: element-system
