clusters/personal/element-system/bridges.yaml
### GMESSAGES
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gmessages-bridge
  namespace: element-system
spec:
  selector:
    matchLabels:
      app: gmessages-bridge
  serviceName: gmessages-bridge
  replicas: 1
  template:
    metadata:
      labels:
        app: gmessages-bridge
    spec:
      volumes:
        - name: bridge-config
          secret:
            secretName: gmessages-bridge
            optional: false
      containers:
      - name: gmessages-bridge
        image: dock.mau.dev/mautrix/gmessages:v26.04
        command:
          - "/usr/bin/mautrix-gmessages"
          - "-c"
          - "/data/config.yaml"
        ports:
        - containerPort: 29336
          name: http
        volumeMounts:
        - name: bridge-config
          mountPath: /data/config.yaml
          subPath: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gmessages-bridge
  namespace: element-system
spec:
  selector:
    app: gmessages-bridge
  ports:
  - port: 29336
    targetPort: http
---
### SLACK
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slack-bridge
  namespace: element-system
spec:
  selector:
    matchLabels:
      app: slack-bridge
  serviceName: slack-bridge
  replicas: 1
  template:
    metadata:
      labels:
        app: slack-bridge
    spec:
      volumes:
        - name: bridge-config
          secret:
            secretName: slack-bridge
            optional: false
      containers:
      - name: slack-bridge
        image: dock.mau.dev/mautrix/slack:v26.05
        command:
          - "/usr/bin/mautrix-slack"
          - "-c"
          - "/data/config.yaml"
        ports:
        - containerPort: 29335
          name: http
        volumeMounts:
        - name: bridge-config
          mountPath: /data/config.yaml
          subPath: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: slack-bridge
  namespace: element-system
spec:
  selector:
    app: slack-bridge
  ports:
  - port: 29335
    targetPort: http
